# study

./: .gitignore  .gitmodules
408/OS/IPC/pipe/anonymous_pipe/: CMakeLists.txt  main.cpp  pipe.h  unix_pipe.cpp  unix_pipe.h  win_pipe.cpp  win_pipe.h
408/OS/deadlock/: example.cpp
408/network/http1.0/: CMakeLists.txt  http_response.cpp  http_response.h  platform_socket.h  router.cpp  router.h
Apple/OC/Block/: Block.m  capture.m  delegate.m
Apple/OC/data_type/: IMP.m  SEL.m
Apple/OC/memory/: readwrite.m
Apple/OC/message/: example.m
Apple/OC/runtime/: resolveMethod.m
Apple/OC/thread/: atomic.m
Apple/swift/: .gitignore
Apple/swift/basic/: Package.swift
DesignPatterns/Singleton/: EagerSingleton.cpp  LazySingleton.cpp  singleton.swift
algorithm/bubble_sort/: bubble_sort.cpp
algorithm/hot100/: topK.cpp
algorithm/hot100/permute/: permute.cpp  permute_non_recursive.cpp
algorithm/hot100/rainwater/: rainwater.cpp  rainwater2.cpp
algorithm/hot100/twosum/: 1.cpp  double_pointer.cpp
algorithm/insert_sort/: insert_sort.cpp
algorithm/quick_sort/: quick_sort.cpp
algorithm/random/: k_arr_sort.cpp
algorithm/sort/: readme.md
algorithm/sort/heap_sort/: heap_sort.cpp
algorithm/sort/quick_sort/: quick_sort_partitions.cpp
cpp/lambda/: advanced.cpp  usage.cpp
cpp/memory_layout/virtual/: info.txt  main.cpp
cpp/thread/: print_to_100.cpp
cpp/thread/future/: async.cpp  packaged_task.cpp  promise.cpp
cpp/thread/mutex/: lock_guard.cpp  mutex.cpp  unique_lock.cpp
socket/basic/: server.cpp
swift/: Package.swift  readme.md
swift/1.data_type/: let_var.swift
swift/2.control_flow/: 1_if_else.swift  2_switch.swift  5_guard.swift
swift/4.optional/: 1_optionals.swift
swift/5.compound_type/: 2_value_reference.swift
swift/6.protocol/: 1_protocol_syntax.swift  2_protocols_as_types.swift  3_protocol_extensions.swift
swift/7.closures/: 1_closure_syntax.swift  2_closures_in_api.swift
swift/9.concurrency/: 1_async_await.swift
(+121 files in other folders)
